chore: refactoring to get test passing and github actions